  * Allow system.exec_command to be used with long-running processes
  * Fix - hotkey dialog does not re-enable the "Press to set" button after
    cancelling - issue #23
  * Slight improvement to installation instructions
  * Fix - special hotkeys - cannot assign previously cleared hotkey - issue #9
  * Revert status icon for GTK version - it only looked good on one version of
    one distro
  
 -- Chris Dekter <cdekter@gmail.com>  Thu, 25 Mar 2010 21:30:52 +1000

autokey (0.61.5-0~karmic) karmic; urgency=high

  * SECURITY UPDATE: arbitrary file overwriting via symlinks (LP: #538471)
    - Store files for the EvDev daemon in FHS-specified locations
    - debian/autokey-common.init: Set pidfile path to "/var/run/autokey-daemon.pid"
    - src/lib/common.py: Set DOMAIN_SOCKET_PATH to "/var/run/autokey-daemon"
    - CVE-2010-0398
    
 -- Chris Dekter <cdekter@gmail.com>  Sat, 20 Mar 2010 21:30:52 +1000

autokey (0.61.4-0~karmic) karmic; urgency=low

  [Chris Dekter]
  * Combine GTK and QT versions into single source tree

  [Luke Faraone]
  * Update package build to build autokey-gtk, autokey-qt and
    autokey-common packages

 -- Chris Dekter <cdekter@gmail.com>  Sun, 28 Feb 2010 08:49:52 +1000

autokey (0.61.3-0~karmic) karmic; urgency=low

  [ Luke Faraone ]
  * Handle invalid or empty pidfiles in src/daemon.py.
  * Lower build-depends requirements to minimum Python versions.

  [ Chris Dekter ]
  * Add --error-handler to debian/rules

 -- Chris Dekter <cdekter@gmail.com>  Sat, 27 Feb 2010 08:49:52 +1000

autokey (0.61.2-0~karmic) karmic; urgency=low

  * Bring back cut/copy/paste item menu options
  * Add 'engine' class to scripting framework to enable access to 
    AutoKey internals
  * Add a configurable user module folder for import into scripts
  * Enable multiple selection mode in treeview and update all necessary
    interactions to work correctly  
  * Enable inline renaming of items in treeview, get rid of title and